@@ -15,7 +15,7 @@
     $back =~ s/\s+//sg;
     $back =~ s/<\?.*?\?>//s;
     $test =~ s/\s+//sg;
-    is( $test, $back, "parse and write" );
+    is( $back, $test, "parse and write" );
 # ----------------------------------------------------------------
 ;1;
 # ----------------------------------------------------------------
